# gcp-university-project

./: Cargo.toml  README.md  ansible-playbook.yml  deploy-state.enc  server-systemd-service-template.j2  terraform.tf
.github/workflows/: deploy_to_gcp.yml  undeploy_from_gcp.yml
client/: Cargo.toml  Trunk.toml  index.html
client/src/: main.rs
client/src/components/: input_field.rs  language_select.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  translate_api.rs
www/: client-355fa5f9d1528629.js  client-355fa5f9d1528629_bg.wasm  index.html
