[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
gloo-net = "0.5.0"
log = "0.4.21"
serde = "1.0.197"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
