[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-proxy = "0.2.0"
actix-web = "4.5.1"
awc = "3.4.0"
common = { version = "0.1.0", path = "../common" }
env_logger = "0.11.3"
google-translate3 = "5.0.4"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.115"
